2012-12-24  Mike Blumenkrantz

        * eina_magic_fail() now throws error messages on NULL pointers instead of critical
        * all efl object-freeing functions now take NULL without crashing or erroring
        * eio functions no longer crash when passed NULL and throw errors accordingly

2012-12-19  Gustavo Sverzut Barbieri (k-s)

	* Fixed Evas RGBA_Image->flags.loaded for copied images.
	* Fixed evas_object_image_is_inside() implementation.

2012-12-19  Carsten Haitzler (The Rasterman)

        * Fixed 24bpp issue with rendering in evas. It shows itself
        only under qemu/kvm with the cirruse driver that I have found.
        In this case the screen is really 24bpp packed and this case
        just never comes up on any vaguely modern gfx system.
        * Fixed 24bpp ximage convert back from 24bpp to 32bpp in
        ecore-x. Only shows itself in qemu/kvm.

2012-12-18  Gustavo Sverzut Barbieri (k-s)

	* Fixed many memory problems with ecore_evas_extn

2012-12-18  Leandro Pereira

	* Add threaded renderer.
	* Modify software_generic and gl_x11 to use threaded renderer.

2012-12-17  Daniel Willmann
	* Add EFL Audio API - ecore_audio

2012-12-17  Leandro Pereira

	* Get rid of unused `ref` field in RGBA_Image struct.
	* Prepare soil to land threaded render.
		* Use refcounted glyph arrays.
		* Common code to draw lines, polygons, rectangles, maps,
		and scaling.

2012-12-13  Cedric Bail

	* Fix potential segv in software engine native_set code.
	* Fix uninitialized data in Evas OpenGL engine.

2012-12-12  Daniel Willmann

	* Fix possible buffer overflow in functions relying on EET_T_LAST.
	* Fix possible memory corruption in xrandr EDID functions.

2012-12-12  Cedric Bail

	* Add ellipsis support in Evas_Object_Text.

2012-12-12  ChunEon park <hermet@hermet.pe.kr>

        * Fix the evas gl line incorrect position problem.

2012-12-11  Cedric Bail

	* Fix leak eet_pbkdf2_sha1 with OpenSSL.

2012-12-10  Gustavo Sverzut Barbieri (k-s)
