@@ -1,3 +1,10 @@
+2012-12-31  Gustavo Sverzut Barbieri (k-s)
+
+	* Fixed eina_xattr_value_ls() an eina_xattr_value_fd_ls()
+	* Added eina_xattr_fd_get(), eina_xattr_fd_set(),
+	eina_xattr_del(), eina_xattr_fd_del(), eina_xattr_copy() and
+	eina_xattr_fd_copy()
+
 2012-12-24  Mike Blumenkrantz
 
         * eina_magic_fail() now throws error messages on NULL pointers instead of critical
